<resources>
    <string name="app_name">XueYa</string>
    <string name="doctortitle">医生在线</string>
    <string name="sheng">省份</string>
    <string name="mylocation">我的位置</string>
    <string name="jobname">医生职称</string>
    <string name="hospitalname">医院等级</string>
    <string name="addname">免费加号</string>
    <string name="queryname">查询专家</string>
    <string name="freedoctor">免费问医生</string>
    <string name="remengDoctor">热门医生</string>
    <string name="huanyihuan">换一换</string>
    <string name="healther">健康顾问</string>
    <string name="sousuocontent">关键字/专家姓名/医院名称/疾病</string>
    <string name="bloodtitle">血压管理</string>
    <string name="mine_login">您还没有登录哦 -</string>
    <string name="login_bt">马上登录</string>
    <string name="main_sign">我的加号</string>
    <string name="main_collect">我的收藏</string>
    <string name="main_data">个人资料</string>
    <string name="main_msg">消息</string>
    <string name="main_set">设置</string>
    <string name="doctortitle2">全国有12639位血压专家为您在线治疗</string>
    <string name="user_edit">请输入手机号</string>
    <string name="psw_edit">6-16个字符,只支持数字,字母区分大小写</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="login">登录</string>
    <string name="mine_name">名字</string>
    <string name="sex">男</string>
    <string name="height">172</string>
    <string name="weight">55</string>
    <string name="birthday">1994-8-5</string>
    <string name="xiaoyu">＜</string>
    <string name="dayu">></string>
    <!-- 血压管理-->
    <string name="xueya_title_text">血压管理</string>
    <string name="xueya_shangchuan">上传</string>

    <string name="xueya_shuju">血压数据</string>

    <string name="xueya_gaoya">高压</string>

    <string name="xueya_diya">低压</string>

    <string name="xueya_gang">/</string>

    <string name="xueya_time">时间</string>

    <string name="xueya_ri">日</string>

    <string name="xueya_zhou">周</string>

    <string name="xueya_yue">月</string>

    <string name="xueya_nian">年</string>

    <string name="xueya_wenyisheng">问医生</string>

    <string name="xueya_zixun">资讯</string>

    <string name="xueya_tixing">提醒</string>
    <!--登陆页面-->
    <string name="hint">还没有注册请</string>
    <string name="eneor">注册</string>
    <string name="forget">忘记密码</string>
    <string name="forget_bt">发送验证码</string>
    <string name="wenyisheng">问医生</string>
    <string name="tiwen">向医生提问</string>
    <string name="fize">免费提问</string>
    <string name="fize_et">请精良详细描述,描述字符不得少于10个字</string>
    <string name="fize_zishu">1/500</string>
    <string name="setting">设置</string>
    <string name="account">账户</string>
    <string name="clean">清理缓存</string>
    <string name="collect">收藏</string>
    <string name="mine_jiahao">我的加号</string>
    <string name="send_docotor">提交给医生</string>
    <string name="zhuanjia_name">专家姓名</string>
    <string name="jiuzhen_time">就诊时间</string>
    <string name="shenhe_zhuangtai">审核状态</string>
    <string name="xinxi_zhuangtai">信息状态</string>
    <string name="send_tishi1">更改成功后,下次登录可以使用新的手机号码,当前手机号码为:15533604305</string>
    <string name="send_tishi">我们已经下发 验证码 到这个手机号:            15533604305</string>
    <string name="mine_jiahao_tishi">为获取到内容,请确认您是否已经加号,请您点击重试</string>
    <string name="fize_tishi">请简单描述您的病情并提交给我们的客服,客服人员会安排专业的健康顾问并向您致电,为阁下进行专业的电话健康指导</string>
</resources>
