<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/mine_nologin"
        android:gravity="center"
        android:background="@color/darkgrey"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textColor="@color/floralwhite"
            android:text="@string/mine_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="10dp"
            android:background="@drawable/login_bt"
            android:text="@string/login_bt"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mine_sign"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/main_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mine_collect"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/main_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:background="@color/gainsboro"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:id="@+id/mine_data"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/main_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:background="@color/gainsboro"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:id="@+id/mine_msg"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/main_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mine_set"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/main_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>