<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#F9F9F9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="#4CBF5C"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/set_back"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_brows_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/set_acc"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/clean_rll"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <RelativeLayout
        android:id="@+id/set_about"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="关于血压卫士"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>