<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FBF8F4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/doctitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:background="#4CBF5C"
        />
    <LinearLayout
        android:layout_margin="18dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/login_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/user"
                android:src="@mipmap/login_phone_img"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/login_user_introduce"
                android:background="@color/darkgrey"
                android:text="@string/user_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/user_ok"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/question_sucess_img"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <EditText
                android:id="@+id/login_user"
                android:background="#009f9898"
                android:layout_marginLeft="15dp"
                android:textColorHint="#bdbaba"
                android:hint="手机"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/user" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/login_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/psw"
                android:src="@mipmap/login_password_img"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:password="true"
                android:id="@+id/login_psw"
                android:background="#009f9898"
                android:layout_marginLeft="15dp"
                android:textColorHint="#bdbaba"
                android:hint="密码"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/psw" />
            <TextView
                android:id="@+id/login_psw_introduce"
                android:background="@color/darkgrey"
                android:text="@string/psw_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_width="70dp"
                android:layout_height="30dp" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/psw_ok"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/question_sucess_img"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </RelativeLayout>
</LinearLayout>
      <TextView
          android:id="@+id/login_forget"
          android:layout_margin="18dp"
          android:textColor="#52C162"
          android:textSize="20dp"
          android:text="@string/forget_psw"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_bt"
        android:textColor="@color/white"
        android:background="@drawable/nologin_bt"
        android:layout_margin="18dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/colorPrimary"
            android:id="@+id/login_register"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="18dp"
            android:text="@string/eneor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:textSize="18dp"
            android:text="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>