<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#F9F9F9"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--个人资料详情页-->
   <RelativeLayout
       android:id="@+id/rl"
       android:background="#4CBF5C"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="50dp">
       <ImageView
           android:id="@+id/per_back"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_centerVertical="true"
           android:src="@mipmap/ic_brows_back"
           android:layout_width="30dp"
           android:layout_height="wrap_content" />
       <TextView
           android:layout_centerInParent="true"
           android:text="个人资料"
           android:textColor="#fff"
           android:textSize="30dp"
           android:layout_marginLeft="40dp"
           android:layout_width="wrap_content"
           android:layout_height="35dp"
           android:layout_centerVertical="true"
           />
   </RelativeLayout>
    <RelativeLayout
        android:id="@+id/personal_name"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/name"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/mine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/xiaoyu"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/persona_name"
            android:layout_marginTop="13dp"
            android:layout_toLeftOf="@id/xiaoyu"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="性别"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/xiaoyu1"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/personal_sex"
            android:layout_marginTop="13dp"
            android:layout_toLeftOf="@id/xiaoyu1"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="身高"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/xiaoyu2"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/personal_height"
            android:layout_marginTop="13dp"
            android:layout_toLeftOf="@id/xiaoyu2"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="体重"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/xiaoyu3"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/personal_weight"
            android:layout_marginTop="13dp"
            android:layout_toLeftOf="@id/xiaoyu3"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="生日"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/xiaoyu4"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/dayu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/personal_birthday"
            android:layout_marginTop="13dp"
            android:layout_toLeftOf="@id/xiaoyu4"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>